--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -32,6 +34,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><form method="GET" action="/urls/<%= id %>"><button type="submit" style="color: blue; border-color: blue;">Edit</button></form></td>
+              <td><form method="POST" action="/urls/<%= id %>/delete"><button  style="color: red; border-color: red;" type="submit">Delete</button> </form></td>
             </tr>
           <% } %>
         </tbody>
