Added an input text for username and stored username in cookie

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,6 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form style=" float: right ;"  method="POST" action="/urls/login"><input type="text" placeholder="Username" name="username"><button type="submit" style=" float: right ;">Login</button> </form>
   </nav>
 </header>
