--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,23 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-    </div>
-    <form style=" float: right ;"  method="POST" action="/urls/login"><input type="text" placeholder="Username" name="username"><button type="submit" style=" float: right ;">Login</button> </form>
+    </div> 
+    <% if (username) { %><form method="POST" action="/urls/logout" class="form-inline">
+      <div class="form-group form-inline">
+        <label>Logged In As: <%=username%></label>
+        <button type="submit" class="btn btn-outline-dark" style="margin: 1em">Logout</button>
+      </div>
+    </form>
+      
+      <%} else { %>
+    <form style="float: right" method="POST" action="/urls/login">
+      <input type="text" placeholder="Username" name="username" /><button
+        type="submit"
+        style="float: right"
+      >
+        Login
+      </button>
+    </form>
+    <% } %>
   </nav>
 </header>
