Created logic for user to login and display name when logged in

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,20 +18,17 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div> 
-    <% if (users.email) { %><form method="POST" action="/logout" class="form-inline">
+    <% if (user) { %>
+    <form method="POST" action="/logout" class="form-inline">
       <div class="form-group form-inline">
-        <label>Logged In As: <%=users.email%></label>
+        <label>Logged In As: <%=user.email%></label>
         <button type="submit" class="btn btn-outline-dark" style="margin: 1em">Logout</button>
       </div>
     </form>
       
-      <%} else { %>
-    <form style="float: right" method="POST" action="/login">
-      <input type="text" placeholder="Enter you email" name="email" /><button
-        type="submit"
-        style="float: right"
-      >Login</button>
-    </form>
+    <%} else { %>  
+      <button type="submit" style="float: right"> <a href="/login">Login</a></button>
+      <button type="submit" style="float: right"> <a href="/register">Register</a></button> 
     <% } %>
   </nav>
 </header>
