--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
   <body>
     <%- include ('partials/_header') %>
     <main style="margin: 1em;">
+      <% if (user) { %>
       <h3>My URLs</h3>
       <table class="table">
         <thead>
@@ -33,13 +34,16 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td><form method="GET" action="/urls/<%= id %>"><button type="submit" style="color: blue; border-color: blue;">Edit</button></form></td>
               <td><form method="POST" action="/urls/<%= id %>/delete"><button  style="color: red; border-color: red;" type="submit">Delete</button> </form></td>
             </tr>
           <% } %>
         </tbody>
       </table>
+      <%} else { %>  
+        <p>Please Login or register</p>
+    <% } %>
     </main>
     <!-- Bootstrap JS -->
     <script
