Refactored code, added a urlAccess function

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,7 +22,7 @@
         </p>
         <br>
         <p> Edit <br>
-          <form method="POST" action="/urls/<%= id %>/edit" >New URL:  <input type="text" placeholder="New Url" name="longURL"><button type="submit" style="color: brown;">Submit</button> </form>
+          <form method="POST" action="/urls/<%= id %>" >New URL:  <input type="text" placeholder="New Url" name="longURL"><button type="submit" style="color: brown;">Submit</button> </form>
         </p>
       </div>
       
